# sunposition-evaluator

./: .gitignore  CMakeLists.txt  README.md
apps/: build_mica_binary_dataset.cpp  sun_position_benchmark_main.cpp  sun_position_evaluator_main.cpp
basic_test/: default_psa_plus_input.json  sun_position_evaluator_spec.json
cmake/: install_release_single_config.cmake
include/: basic_test_fixture.h  mica_binary_dataset.h  mica_binary_dataset_builder.h  sun_position_algorithm.h  sun_position_evaluator.h
src/: basic_test_fixture.cpp  built_mica_binary_dataset.cpp  mica_binary_dataset_builder.cpp  sun_position_algorithm.cpp  sun_position_evaluator.cpp
tests/: sun_position_regression_test_main.cpp
